repaired html overlaps

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,61 +1,59 @@
-body {
-    font-family: Helvetica, Arial, sans-serif;
-  }
-  body {
-    /* more on this crazy alphanumerical value in a minute! */
-    color: #39a6b2;
-    font-family: Helvetica, Arial, sans-serif;
-  }
-  /* apply styles to <header> */
-  * {
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
   }
-  header {
+  /* more on this crazy alphanumerical value in a minute! */
+body {
+    color: #39a6b2;
+    font-family: Helvetica, Arial, sans-serif;
+  }
+  /* apply styles to header */
+header {
+    padding: 40px 35px;
+    background-color: #39a6b2;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    padding: 20px 35px;
-    background-color: #39a6b2;
   }
-  header a {
+header h1 {
+    font-weight: bold;
+    font-size: 36px;
+    color: #fce138;
+    margin: 0;
+    display: inline;
+  }
+header a {
     text-decoration: none;
     color: #fce138;
   }
-  header nav {
+header nav {
     margin: 7px 0;
   }
 
-  header nav ul {
+header nav ul {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     list-style: none;
   }
-
-  header nav ul li a {
+header nav ul li a {
     margin: 0 30px;
     font-weight: lighter;
     font-size: 1.55vw;
-  }
+}
 
-  header h1 {
-    font-weight: bold;
-    margin: 0;
-    font-size: 36px;
-    color: #fce138 
-  }
-
-  footer {
+footer {
     background: #fce138;
     width: 100%;
     padding: 40px 35px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
   }
 
-  footer h2 {
-    display: inline;
+footer h2 {
     color: #024e76;
     font-size: 30px;
     margin: 0;
@@ -74,52 +72,31 @@ body {
   section {
     padding: 60px;
   }
-
-  section {
-    padding: 60px;
-  }
-  
-  /* Hero Style Start */
+/* Hero Style Starts */
 .hero {
-    background-image: url("/Users/sarahdawn/Desktop/projects/run-buddy/assets/Images/hero-bg.jpg");
+    background-image: url("./assets/Images/hero-bg.jpg");
     height: 600px;
     background-size: cover;
     background-position: center;
-    position: relative;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
   }
-  .hero-form {
-    background-color: #fce138;
-    padding: 20px;
-    width: 500px;
-    color: #024e76;
-  }
-  .hero-form {
-    border-style: solid;
-    border-width: 3px;
-    border-color: #024e76;
-    background-color: #fce138;
-    padding: 20px;
-    width: 500px;
-    color: #024e76;
-    position: absolute;
-    bottom: 0px;
-    right: 0px;
-  } 
-  .hero-form {
+  /* Hero Style Ends */
+
+.hero-form {
     border: 3px solid #024e76;
     background-color: #fce138;
     padding: 20px;
-    width: 500px;
     color: #024e76;
-    position: absolute;
-    bottom: 120px;
-    right: 140px;
+    width: 500px;
+    margin: 3.5%;
   }
-  .hero-form h3 {
+
+.hero-form h3 {
     font-size: 24px;
     margin: 0;
   }
-  
   .hero-form p {
     margin: 5px 0 15px 0;
   }
@@ -133,9 +110,11 @@ body {
     width: 100%;
     margin-bottom: 15px;
   }
+
   .hero-form label {
     margin: 0 5px;
   }
+
   .hero-form button {
     color: #fce138;
     background-color: #024e76;
@@ -143,58 +122,22 @@ body {
     padding: 10px 20px;
     font-size: 16px;
   }
-    /* Hero Style End */
-
-    .intro {
-        text-align: center;
-      }
-      .intro h2 {
-        /* add this alongside your other declarations */
-        display: inline-block;
-      }
-      .intro p {
-        line-height: 1.7;
-        color: #39a6b2;
-        width: 80%;
-        font-size: 20px;
-      }
-      .intro p {
-        /* add this alongside your other declarations */
-        margin: 0 auto;
-      }
+  .intro {
+    text-align: center;
+  }
+  
+  .intro p {
+    line-height: 1.7;
+    color: #39a6b2;
+    width: 80%;
+    font-size: 20px;
+    margin: 0 auto;
+  }
+      /* add this alongside your other declarations */
+      
       .steps { 
         text-align: center;
         background: #fce138;
-      }
-      .section-title {
-        font-size: 55px;
-        color: #024e76;
-        margin-bottom: 35px;
-        padding: 0 100px 20px 100px;
-        display: inline-block;
-        border-bottom: 3px solid;
-      }
-
-      .contact-info h3 {
-        color: #fce138;
-        font-size: 32px;
-      }
-      
-      .contact-info p, .contact-info address {
-        margin: 20px 0;
-        line-height: 1.5;
-        font-size: 20px;
-        font-style: normal;
-      }
-      
-      .contact-info a {
-        color: #fce138;
-      }
-      
-      /* REACH OUT STYLES END */
-      .secondary-border {
-        border-color: #39a6b2;
-        
       }
       .steps div {
         margin-bottom: 80px;
@@ -203,26 +146,43 @@ body {
       .steps img {
         width: 15%;
         margin: 10px 0;
-      } 
+      }
       
       .steps h3 {
-        color: #fce138;
+        color: #024e76;
         font-size: 46px;
         margin-top: 10px;
       }
-
+      
       .steps p {
         color: #39a6b2;
         font-size: 23px;
       }
-      
       .steps span {
         font-size: 38px;
       }
+
+      .section-title {
+        font-size: 55px;
+        color: #024e76;
+        margin-bottom: 35px;
+        padding: 0 100px 20px 100px;
+        display: inline-block;
+        border-bottom: 3px solid;
+      }
+      
+      .primary-border {
+        border-color: #fce138;
+      }
+      
+      .secondary-border {
+        border-color: #39a6b2;
+      }
+
       .trainers {
         overflow: auto;
-        text-align: center;
       }
+
       .trainer {
         overflow: auto;
         width: 900px;
@@ -264,13 +224,12 @@ body {
         line-height: 1.3;
       }
 
-      .section-title {
-        font-size: 55px;
-        display: inline-block;
-        padding: 0 100px 20px 100px;
-        border-bottom: 3px solid;
-        margin-bottom: 35px;
-        color: #024e76;
+      .text-left {
+        text-align: left;
+      }
+      
+      .text-right {
+        text-align: right;
       }
 
       /* REACH OUT STYLES START */
@@ -303,7 +262,8 @@ body {
   font-size: 32px;
 }
 
-.contact-info p, .contact-info address {
+.contact-info p,
+.contact-info address {
   margin: 20px 0;
   line-height: 1.5;
   font-size: 20px;
@@ -367,6 +327,9 @@ border-bottom {
   right: 80px;
   bottom: 15px;
   left: 80px;
+}
+.flex-row {
+  display: flex;
 }
 
 
